# stm32_cmake

src/: CMakeLists.txt
src/libraries/CMSIS/: CMakeLists.txt  cmsis.mk
src/libraries/STM32H7xx_HAL_Driver/: CMakeLists.txt  csourcelist.txt
src/stm32proj/: csourcelist.txt  search.py  stm32-gcc-jlink.cmake  stm32-gcc-stlink.cmake  target-def.cmake
src/stm32proj/app/ILI9341/: ILI9341_GFX.c  ILI9341_STM32_Driver.c  ILI9341_STM32_Driver.h  ILI9341_Touchscreen.c  ILI9341_Touchscreen.h
src/stm32proj/app/ST7789/: fonts.c  fonts.h  st7789.c  st7789.h
src/stm32proj/app/ili9341/: fonts.c  fonts.h  ili9341.c  ili9341.h  ili9341_touch.c  ili9341_touch.h
src/stm32proj/app/ssd1306/: ssd1306.c  ssd1306.h  ssd1306_conf.h  ssd1306_tests.c  ssd1306_tests.h
src/stm32proj/cubemx/: .mxproject  LCD.ioc  Makefile  stm32h7.ioc
src/stm32proj/cubemx/Core/Inc/: main.h  spi.h  stm32h7xx_it.h
src/stm32proj/cubemx/Core/Src/: dma.c  freertos.c  gpio.c  main.c  spi.c  stm32h7xx_hal_timebase_tim.c  stm32h7xx_it.c  tim.c
src/stm32proj/lib/lvgl/drivers/: lv_port_disp.c  lv_port_disp.h
src/stm32proj/lib/lvgl/lvgl/: lv_conf.h
